Adding in new SVG icons

--- a/blog/templates/blog/blog_base.html
+++ b/blog/templates/blog/blog_base.html
@@ -9,13 +9,10 @@
 {% endblock %}
 {% endblock %} 
 
-
-
 {% block body %}
 
 <div class="container">
     {% block blog_heading %}
-    
         <p class="heading-text padding-top padding-bottom text-center">
             Portal 
             <span class="blog-heading-icon">
@@ -23,84 +20,82 @@
             </span>
         </p>
     {% endblock %}
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="text-center">
-                    {% block navbar_item_1 %}
-                        <div class="blog-nav-item">
-                            <i class="fas fa-bars"></i>
-                            <a class="gray-link" href="{% url 'blog:blog-list' %}">
-                                Portal
-                            </a>
-                        </div>
-                    {% endblock %}
+    <nav>
+        <ul class="text-center navbar-container">
+            {% block navbar_item_1 %}
+                <li class="">
+                    <a class="" href="{% url 'blog:blog-list' %}">
+                         <svg>
+                             <use href="{% static 'sph_style/icons/portal.svg#portal' %}"></use>
+                         </svg>
+                    </a>
+                </li>
+            {% endblock %}
 
-                    {% if user.is_authenticated %}
-                    {% block navbar_item_2 %}
-                        <div class="blog-nav-item">
-                            <i class="fas fa-edit"></i>
-                            <a class="gray-link" href="{% url 'blog:blog-create' 'none' %}">
-                                Write
-                            </a>
-                        </div>
-                    {% endblock %}
-                    {% endif %}
+            {% if user.is_authenticated %}
+            {% block navbar_item_2 %}
+                <li class="blog-nav-item">
+                    <i class="fas fa-edit"></i>
+                    <a class="gray-link" href="{% url 'blog:blog-create' 'none' %}">
+                        Write
+                    </a>
+                </li>
+            {% endblock %}
+            {% endif %}
 
-                    {% if user.is_authenticated %}
-                        {% block navbar_item_3 %}
-                            <div class="blog-nav-item">
-                                <i class="fas fa-th-large"></i> 
-                                <a class="gray-link" href="{% url 'blog:user-posts' user.id %}">
-                                    My Blog
-                                </a>
-                            </div>
-                        {% endblock %}
+            {% if user.is_authenticated %}
+                {% block navbar_item_3 %}
+                    <li class="blog-nav-item">
+                        <i class="fas fa-th-large"></i>
+                        <a class="gray-link" href="{% url 'blog:user-posts' user.id %}">
+                            My Blog
+                        </a>
+                    </li>
+                {% endblock %}
 
-                        {% block navbar_item_4 %}
-                            <div class="blog-nav-item">
-                                <i class="fas fa-users"></i> 
-                                <a class="gray-link" href="{% url 'user:user-list' %}">
-                                    Users
-                                </a>
-                            </div>
-                        {% endblock %}
+                {% block navbar_item_4 %}
+                    <li class="blog-nav-item">
+                        <i class="fas fa-users"></i>
+                        <a class="gray-link" href="{% url 'user:user-list' %}">
+                            Users
+                        </a>
+                    </li>
+                {% endblock %}
 
-                        {% block navbar_item_5 %}
-                            <div class="blog-nav-item">
-                                <i class="fas fa-sign-out-alt"></i>
-                                <a class="gray-link" href="{% url 'user:logout' %}">
-                                    Log out
-                                </a>
-                            </div> 
-                        {% endblock %}
-                    {% else %}
-                        {% block navbar_item_76 %}
-                            <div class="blog-nav-item">
-                                <i class="fas fa-sign-in-alt"></i>
-                                <a class="gray-link" href="{% url 'user:login' %}">
-                                    Log in 
-                                </a>
-                            </div>  
-                        {% endblock %}
-                        {% block navbar_item_7 %}
-                            <div class="blog-nav-item">
-                                <i class="fas fa-address-card"></i>
-                                <a class="gray-link" href="{% url 'user:register' %}">
-                                    Register 
-                                </a>
-                            </div>  
-                        {% endblock %}  
-                    {% endif %}
-
-                </div>
-            </div>
-        </div>
+                {% block navbar_item_5 %}
+                    <li class="blog-nav-item">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <a class="gray-link" href="{% url 'user:logout' %}">
+                            Log out
+                        </a>
+                    </li>
+                {% endblock %}
+            {% else %}
+                {% block navbar_item_76 %}
+                    <li class="blog-nav-item">
+                        <i class="fas fa-sign-in-alt"></i>
+                        <a class="gray-link" href="{% url 'user:login' %}">
+                            Log in
+                        </a>
+                    </li>
+                {% endblock %}
+                {% block navbar_item_7 %}
+                    <li class="blog-nav-item">
+                        <i class="fas fa-address-card"></i>
+                        <a class="gray-link" href="{% url 'user:register' %}">
+                            Register
+                        </a>
+                    </li>
+                {% endblock %}
+            {% endif %}
+        </ul>
+    </nav>
     <hr>
-    </div>
+</div>
 
-    {% block blog_body %}
+{% block blog_body %}
 
-    {% endblock %}
+{% endblock %}
 
 {% endblock %}
 
