--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -19,57 +19,72 @@
 {% block body %}
   <main>
     <div class="container">
+        <p class="heading-text text-center padding-top--2 padding-bottom--2">Objective</p>
+        <p class="reading-font-lg text-center">Front-End, Back-End, or Full-Stack Web-App Development</p>
       
-      <div class="icon-heading-container padding-top--2 padding-bottom--2">
-          <p class="heading-text">Objective</p>
-          <i class="material-icons heading-icon">
-            local_cafe
-          </i>
-      </div>
-      
-      <p class="reading-font-lg text-center">Front-End, Back-End, or Full-Stack Development of Web Apps</p>
-      
-      <div class="icon-heading-container padding-top--2 padding-bottom--2">
-          <p class="heading-text">Education</p>
-          <i class="material-icons heading-icon">
-              library_books
-          </i>
-      </div>
-      
-      <div class="row">
-        <div class = "col-lg-6">
-          <p class="text-center reading-font-lg">Wayne State University</p>
-          <p class="text-center reading-font-lg">B.S., Computer Science</p>
+        <p class=" heading-text text-center padding-top--2 padding-bottom--2">Education</p>
+        <div class="row">
+            <div class = "col-lg-6">
+                <p class="text-center reading-font-lg">Wayne State University</p>
+                <p class="text-center reading-font-lg">B.S., Computer Science</p>
+            </div>
+            <div class="col-lg-6">
+                <p class="text-center reading-font-lg">Average GPA: 3.7</p>
+                <p class="text-center reading-font-lg">Major GPA: 4.0</p>
+            </div>
         </div>
-        <div class="col-lg-6">
-          <p class="text-center reading-font-lg">Average GPA: 3.65</p>
-          <p class="text-center reading-font-lg">Major GPA: 4.0</p>
+
+        <p class="heading-text text-center padding-top--2 padding-bottom--2 icon-heading-container">
+            Open-Source (Side) Projects
+            <i class="material-icons heading-icon">
+                code
+            </i>
+        </p>
+        <div class="row">
+            <div class="col-lg-6">
+                <p class="attribute-heading-text">
+                    <a class="gray-link" href="https://myzipcode.net" target="_blank">What's My Zipcode?</a>
+                </p>
+                <p class="reading-font">Django and Angular, hosted through Heroku</p>
+                <p class="attribute-body-text">
+                    A web application, whereby both the 5 and 4 digit zipcodes 
+                    (for any given location in the U.S.) are displayed. 
+                    (Utilizes USPS’ Address Information API)
+                </p>
+                <p class="attribute-body-text"></p>
+            </div>
+            <div class="col-lg-6">
+                <p class="attribute-heading-text">
+                    <a class="gray-link" href="https://myzipcode.net" target="_blank">Portfolio &Aacute; Blogging App</a>
+                </p>
+                <p class="reading-font">Django, PostgreSQL, hosted through Heroku</p>
+                <p class="attribute-body-text">
+
+                </p>
+            </div>
         </div>
-      </div>
-      <div class="icon-heading-container padding-top--2 padding-bottom--2">
-        <p class="heading-text">
+
+        <p class="heading-text text-center padding-top--2 padding-bottom--2">
             Work-Related Projects  
         </p>
-        <i class="material-icons heading-icon">
-            work
-        </i>
-      </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <p class="reading-font-lg text-center gray-link">Call Harbor: Project 'Betroit'</p>
-          <p class="card-body-text">
-            As a Full-Stack Developer, I developed a web application whose purpose is to automate the new-client process. 
-            There are two interfaces to the application: Client-Side, and Staff-Side.
-            <br><br>
-            From the Staff-Side, a staff member would put the client's requests into a specialized form, generate a PIN for the client, 
-            and send the client over to their side of the application. 
-            <br><br>
-            From the Client-Side, the client uses the pin to log into a customized form whereby they enter in their client data. 
-            Furthermore, this side of the application utilizes REST API services. 
-            The Client-Side app is complex, tabbed, and uses an extensive verification process. 
-          </p>
-          <p class="reading-font">Written in AngularJS, PHP, & mySQL</p>
-        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <p class="reading-font-lg text-center gray-link">Call Harbor: Project 'Betroit'</p>
+                <p class="card-body-text">
+                As a Full-Stack Developer, I developed a web application whose purpose is to automate the new-client process. 
+                There are two interfaces to the application: Client-Side, and Staff-Side.
+                <br><br>
+                From the Staff-Side, a staff member would put the client's requests into a specialized form, generate a PIN for the client, 
+                and send the client over to their side of the application. 
+                <br><br>
+                From the Client-Side, the client uses the pin to log into a customized form whereby they enter in their client data. 
+                Furthermore, this side of the application utilizes REST API services. 
+                The Client-Side app is complex, tabbed, and uses an extensive verification process. 
+                </p>
+                <p class="reading-font">Written in AngularJS, PHP, & mySQL</p>
+            </div>
+
+
         <div class="col-lg-6 col-sm-12 pt-lg-0 pt-sm-3">
           <p class="reading-font-lg text-center gray-link"><a>Static Website - Contents Protected</a></p>
           <p class="card-body-text">
@@ -80,15 +95,12 @@
         </div>
       </div>
       <hr>
-      <div class="icon-heading-container padding-top--2 padding-bottom--2">
+      <div class=" padding-top--2 padding-bottom--2">
         <p class="heading-text">Open-Source (Side) Projects</p>
-        <i class="material-icons heading-icon">
-          code
-        </i>
+     
       </div>
       <p class="subheading-text text-center padding-bottom">Click on a project's name to view its Github</p>
       <div class="row">
-        <div class="col-lg-2"></div>
         <div class="col-lg-4">
           <p class="resume-heading text-center">
             <a class="gray-link" href="https://github.com/DSWhite96/Campus_Price_And_Dice">Campus Price & Dice</a>
