More resume work

--- a/sph_style/static/sph_style/hero_properties.css
+++ b/sph_style/static/sph_style/hero_properties.css
@@ -38,7 +38,7 @@
 }
 
 .white--transition-to-morning-blue {
-    background-image: linear-gradient(to top, #564aff, #958cff, #b3adff, #d0ccff, #ffffff, #ffffff);
+    background-image: linear-gradient(to top, #564aff, #958cff, #ffffff, #ffffff, #ffffff, #ffffff);
 }
 
 .deep-blue  {
