--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -16,19 +16,56 @@
         <p class="reading-font-lg text-center">
             Aspiring Software Architect - with demonstrated experience in Micro-Service based architecture
         </p>
-        <div class="">
-            <p class=" heading-text text-center pt-5 pb-4">Education</p>
-            <div class="row pt-4 pb-4">
-                <div class="col-lg-6">
-                    <p class="text-center reading-font-lg">Wayne State University</p>
-                    <p class="text-center reading-font-lg">B.S., Computer Science</p>
-                </div>
-                <div class="col-lg-6">
-                    <p class="text-center reading-font-lg">Average GPA: 3.7</p>
-                    <p class="text-center reading-font-lg">Major GPA: 4.0</p>
-                </div>
+
+        <p class="heading-text text-center pt-5 pb-4">Work Experience</p>
+        <div class="row">
+            <div class="col-lg-9">
+                <p class="attribute-heading-text">Automated Media Inc</p>
+                <p class="reading-font">Full-Stack Software Engineer: January 2020 - Present</p>
+                <p class="attribute-body-text">
+                    Created sub-applications within – and maintained – existing web applications. My 
+                    Front-End work was done with Angular 2+, with NgRx state management. My Back-End work with
+                    .NET Core, with Dapper, using SAML SSO. Used Transact-SQL (SQL Server) and MongoDB on 
+                    the persistence layer.
+                    <br /><br />
+                    Concerning version control, I used Git and SVN.
+                </p>
+            </div>
+            <div class="col-lg-9 pt-3">
+                <p class="attribute-heading-text">Urban Science</p>
+                <p class="reading-font">Full-Stack Development Intern: May 2019 - December 2019</p>
+                <p class="attribute-body-text">
+                    Maintained and added new features to an existing web application. My Front-End work
+                    was done with Angular 2+, with NgRx state management. My Back-End work with
+                    .NET Core, with Entity Framework and OpenAPI. Used SQL Server on the persistence layer.
+                    <br /><br />
+                    Concerning version control, I used Git and TFS.
+                </p>
+            </div>
+
+            <div class="col-lg-9 pt-3">
+                <p class="attribute-heading-text">Call Harbor</p>
+                <p class="reading-font">Full-Stack Developer: June 2018 - March 2019</p>
+                <p class="attribute-body-text">
+                    Wrote a Web Application, from start to finish. My Front-End work was done with
+                    AngularJS (Consisted of two SPAs). My Back-End work with PHP. Used MySQL on
+                    the persistence layer.
+                </p>
             </div>
         </div>
+
+        <!--<p class=" heading-text text-center pt-5 pb-4">Education</p>
+        <div class="row pt-4 pb-4">
+            <div class="col-lg-6">
+                <p class="text-center reading-font-lg">Wayne State University</p>
+                <p class="text-center reading-font-lg">B.S., Computer Science</p>
+            </div>
+            <div class="col-lg-6">
+                <p class="text-center reading-font-lg">Average GPA: 3.7</p>
+                <p class="text-center reading-font-lg">Major GPA: 4.0</p>
+            </div>
+        </div>-->
+
     </div>
 </div>
 <div class="morning-blue pt-5">
@@ -95,12 +132,12 @@
     </div>  
  </div>
 <div class="morning-blue--transition-to-blue">
-    <div class="container text-white pt-2 pb-5">
-        <p class="heading-text text-center pb-4">
+    <div class="container text-white pt-5 pb-5">
+        <p class="heading-text text-center pb-5">
             Work-Related Projects
         </p>
         <div class="row">
-            <div class="col-lg-9">
+            <div class="col-lg-9 pt-5 pt-md-2 pt-lg-0">
                 <p class="attribute-heading-text">Automated Media Inc: Contents Protected</p>
                 <p class="reading-font">Angular, ASP.NET Core, Transact-SQL, and MongoDB</p>
                 <p class="attribute-body-text">
@@ -130,14 +167,14 @@
     </div>
 </div>
 <div class="blue">
-    <div class="container text-white pt-2 pb-5">
-        <div class="icon-heading-container padding-bottom--2">
+    <div class="container text-white pt-5 pb-5">
+        <div class="icon-heading-container pb-5">
             <p class="heading-text">My Skillset</p>
             <i class="material-icons heading-icon">
                 build
             </i>
         </div>
-        <div class="text-center reading-font">
+        <div class="text-center reading-font pt-5 pt-md-2 pt-lg-0">
             <p>C++ & Object Oriented Programming</p>
             <p>HTML</p>
             <p>CSS, Bootstrap, Javascript</p>
