--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block hero-image-type %}
-<div class="hero-sub-image hero-sm clear-white">
+<div class="hero-sub-image hero-sm blue">
 {% endblock %}
 
 {% block hero-image-text %}
@@ -11,7 +11,7 @@
 {% block body %}
 
 <div class="">
-    <div class="container pb-5">
+    <div class="container pt-5 pb-5">
         <p class="heading-text text-center pb-4">Objective</p>
         <p class="reading-font-lg text-center">
             Aspiring Software Architect - with demonstrated experience in Micro-Service based architecture
@@ -53,19 +53,6 @@
                 </p>
             </div>
         </div>
-
-        <!--<p class=" heading-text text-center pt-5 pb-4">Education</p>
-        <div class="row pt-4 pb-4">
-            <div class="col-lg-6">
-                <p class="text-center reading-font-lg">Wayne State University</p>
-                <p class="text-center reading-font-lg">B.S., Computer Science</p>
-            </div>
-            <div class="col-lg-6">
-                <p class="text-center reading-font-lg">Average GPA: 3.7</p>
-                <p class="text-center reading-font-lg">Major GPA: 4.0</p>
-            </div>
-        </div>-->
-
     </div>
 </div>
 <div class="morning-blue pt-5">
@@ -90,7 +77,7 @@
                     its own project.
                 </p>
             </div>
-            <div class="col-lg-6 pt-md-2 pt-lg-0">
+            <div class="col-lg-6 pt-5 pt-md-2 pt-lg-0">
                 <p class="attribute-heading-text">
                     <a class="lightblue-link" href="https://myzipcode.net" target="_blank">What's My Zipcode?</a>
                 </p>
@@ -148,7 +135,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-9 pt-3">
+            <div class="col-lg-9 pt-5 pt-md-3">
                 <p class="attribute-heading-text">Call Harbor: Project 'Betroit'</p>
                 <p class="reading-font">AngularJS, PHP, & mySQL</p>
                 <p class="attribute-body-text">
