--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -177,4 +177,23 @@
     
 {% endblock %}
 
-{% block custom_footer_elements %}{% endblock %}
+{% block custom_footer_elements %}
+<footer class="footer" style="margin-top: 5%">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <a class="text-muted" href="https://icons8.com">
+                    Check out Icons8! I used their icons
+                </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6">
+                <span class="text-muted">Copyright &copy Wassim Katbey 2018</span>
+            </div>
+        </div>
+        <br>
+    </div>
+</footer>
+{% endblock %}
