--- a/static_website/templates/static_website/index.html
+++ b/static_website/templates/static_website/index.html
@@ -14,7 +14,7 @@
     Full-Stack Web Developer, and Hobbyist
   </p>
   <div class="text-center padding-top">
-    <form action="#intro">
+    <form action="{% url 'static_website:resume' %}">
       <button type="submit" id = "introButton" class="btn-outline-blue--light text-center">Meet Me</button>
     </form>
   </div>
